# Aurora

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  agents-config.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
design/: agent-models.html  agent-skills.html  import-skill.html  mockup.html  models.html  packs.html  settings.html  shared.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  import.rs  lib.rs  main.rs  meta.rs  packs.rs  paths.rs
src/components/: AgentBadge.tsx  ImportSkillDialog.tsx  PageHeader.tsx  Sidebar.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  dropdown-menu.tsx
src/lib/: api.ts  utils.ts
src/pages/: AgentModels.tsx  AgentSkills.tsx  Models.tsx  Packs.tsx  Settings.tsx  SkillsCenter.tsx
