[package]
name = "aurora"
version = "0.1.2"
description = "Aurora — manage agent skills"
authors = ["lizhihui"]
edition = "2021"

[lib]
name = "aurora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
toml_edit = "0.22"

# Windows: use junctions (no admin/Developer Mode needed) instead of symlinks.
[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3"
